# genfrkl

./: .gitignore  CMakeLists.txt  README.md  TODO.md  package.xml  setup.py  sm_assigned_ids.yaml
cmake/: genfrkl-extras.cmake.em  genkl-extras.cmake.em
scripts/: CMakeLists.txt  calc_msg_md5.py  genmsg_frkl.py  msg.h.template  msg.kl.template  msg.th.template  srv.h.template  srv.kl.template  srv.th.template
src/genfrkl/: __init__.py  field_info.py  karel.py  msg_mapping.py  utils.py
test/: test_group_fields.py  test_karel.py
